src/layout/Footer.module.scss
footer.container {
  padding: 0;

  .top {
    /* margin-bottom: 5em; */
    padding: 3em 5em 4em;
    font-size: 16px;
    @media (max-width: 480px) {
      padding: 3em 1.5em 4em;
    }

    .logo {
      padding: 0 0.75em;
    }

    .links {
      :global(.content) {
        margin-left: 1em;

        a,
        p {
          color: #fff;
          opacity: .75;
          font-size: 14px;
        }
      }

      h6 {
        margin-left: 1em;
      }
    }

    .icon {
      display: flex;
      margin-bottom: 2em;
      padding: 0 0.75em;
      align-items: center;

      :global(.right) {
        margin-left: 1em;
        color: #fff;
        opacity: .75;
        font-size: 14px;

        a {
          color: #fff;
        }
      }
    }
  }

  .bottom {
    background: white;
    color: black;
    min-height: 150px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2em 3em;

    a {
      display: block;
      color: #000;
      text-decoration: underline;
      font-weight: bold;
    }
  }
}

